Add DomainEvents to domain layer and implement kafka adapter
